trait-xml/tests/fail/unk_vis.rs
trait_xml::trait_xml! {
    <trait>
        <name>Foo</name>
        <vis>bar</vis>
    </trait>
}

fn main() {}
